Fix facebook share button getting cut off in sharebar

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -164,6 +164,17 @@ input[type="submit"]
 }
 
 /* ==========================================================================
+   Sharebar
+   ========================================================================== */
+#sharebar
+{
+   .st-facebook-counter
+   {
+      height: 24px !important;
+   }
+}
+
+/* ==========================================================================
    Posts
    ========================================================================== */
 
